# facebookmarketing-python

./: README.md  client.py  exception.py  pyproject.toml  requirements.txt  setup.py
facebookmarketing/: application.py  client.py  comment.py  decorator.py  decorators.py  enumerate.py  enumerator.py  enumerators.py  exception.py  exceptions.py  insights.py  instagram.py  marketing.py  page.py  post.py  user.py
tests/: test_client.py
